<resources>
    <string name="app_name">gestion-averias-movil-equipoTYNSolutions</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="titulo_cambiar_estado">Actualizar Estado de Máquina</string>
    <string name="estado_averiada">Averiada</string>
    <string name="estado_mantenimiento">En mantenimiento</string>
    <string name="estado_operativa">Operativa</string>
    <string name="estado_fuera_servicio">Fuera de servicio</string>
    <string name="btn_actualizar_estado">Actualizar Estado</string>

    <string name="tab_finalizadas">Finalizadas</string>
    <string name="nuevas">Nuevas</string>
    <string name="recibidas">Recibidas</string>
    <string name="finalizadas">Finalizadas</string>
    <string name="salir">Salir</string>
    <string name="volver_al_listado">← Volver al listado</string>
    <string name="descripci_n_del_problema">Descripción del problema:</string>
    <string name="historial_de_intervenciones">Historial de Intervenciones:</string>
    <string name="aceptar_aver_a">Aceptar avería</string>
    <string name="registrar_intervenci_n">Registrar intervención</string>
    <string name="finalizar_aver_a">Finalizar avería</string>
    <string name="formato_fecha_asignacion">Asignada el: %1$s</string>
    <string name="formato_nombre_maquina">Máquina: %1$s</string>
    <string name="logout_title">Cerrar sesión</string>
    <string name="logout_message">¿Estás seguro de que deseas salir de la aplicación? Tendrás que volver a introducir tus credenciales.</string>
    <string name="cancelar">Cancelar</string>
</resources>